# typed-lua-core

./: .gitignore  .travis.yml  README.md  TODO  best_example  best_examples  coreTL.cabal  example
examples/binops/: source3.tlc
examples/metatable/: source1.tlc
examples/objects/: source1.tlc  source2.tlc  source3.tlc
examples/recursion/: source1.tlc  source2.tlc  source3.tlc
examples/simple/: source1.tlc  source2.tlc  source3.tlc
examples/statements/: source1.tlc  source2.tlc  source3.tlc
examples/tables/: source1.tlc  source2.tlc  source3.tlc  source4.tlc  source5.tlc
src/: AST.hs  Main.hs  Types.hs
src/Parser/: Code.hs  Comments.hs  Types.hs  Utils.hs
src/Transform/: Globals.hs
src/Typechecker/: AuxFuns.hs  Show.hs  Subtype.hs  Type.hs  Utils.hs
test/: Main.hs
test/Test/: Parser.hs  Typechecker.hs
test/Test/Typechecker/: Subtyping.hs  Typechecker.hs  Utils.hs
