name:                coreTL
version:             0.1.0.0
author:              dyczektomek
maintainer:          dyczektomek@gmail.com

category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable coreTL
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base
               ,    trifecta
               ,    parsers
               ,    pretty-show
               ,    mtl 
               ,    containers
               ,    lens
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base
               , hspec  
  default-language: Haskell2010