name:                coreTL
version:             0.1.0.0
author:              dyczektomek
maintainer:          dyczektomek@gmail.com

category:            Language
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules: AST    
                 , Types      
                 , Parser.Types   
                 , Parser.Code    
                 , Parser.Utils     
                 , Typechecker.Type   
                 , Typechecker.Utils    
                 , Typechecker.Subtype    
                 , Typechecker.AuxFuns    
                 , Transform.Globals    
                 , Typechecker.Show   
  build-depends:       base   
                     , parsers    
                     , trifecta   
                     , pretty-show    
                     , mtl    
                     , containers   
                     , lens   
  hs-source-dirs:      src    
  default-language:    Haskell2010

executable coreTL
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  base
               ,  trifecta
               ,  parsers
               ,  pretty-show
               ,  mtl 
               ,  containers
               ,  lens
  default-language: Haskell2010


test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Test.Parser
               , Test.Typechecker
  build-depends: base
               , hspec
               , trifecta
               , coreTL
  default-language: Haskell2010